<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teva.validatortester.validatortester.MainActivity"
    >

    <EditText
        android:id="@+id/email_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/email_validation_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/alphabetical_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/alphabetical_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_validation_text"
        />

    <TextView
        android:id="@+id/alphabetical_text_validation_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/alphabetical_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/no_alphabetical_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/no_alphabetical_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alphabetical_text_validation_text"
        />

    <TextView
        android:id="@+id/no_alphabetical_text_validation_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/no_alphabetical_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/special_char_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/special_characters"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_alphabetical_text_validation_text"
        />

    <TextView
        android:id="@+id/special_char_text_validation_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/special_char_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/no_special_char_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/no_special_characters"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/special_char_text_validation_text"
        />

    <TextView
        android:id="@+id/no_special_char_text_validation_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/no_special_char_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/string_with_length_limit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/meet_length_limit_requirement"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_special_char_text_validation_text"
        />

    <TextView
        android:id="@+id/string_with_length_limit_validation_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/string_with_length_limit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
</android.support.constraint.ConstraintLayout>
